style: #74: add overflow hidden for hero component to prevent decorative elements from climbing on an adjacent component

--- a/ui/components/chelzoo/ChelzooHero/ChelzooHero.scss
+++ b/ui/components/chelzoo/ChelzooHero/ChelzooHero.scss
@@ -2,6 +2,7 @@
   @include inter-font;
 
   position: relative;
+  overflow: hidden;
   padding: 48px 0 120px;
   min-height: calc(100vh - $header-redesign-height);
   font-weight: 500;
